styles/style.css
* {
  box-sizing: border-box;
}

html {
  font-size: 10px;
}

body {
  background-color: #011627;
  color: #FDFFFC;
  -webkit-font-smoothing: antialiased;
}

h1 {
  font-size: 4rem;
  font-family: "montserrat", sans-serif;
  font-weight: bold;
  letter-spacing: .2rem;
}

h2 {
  font-size: 3.4rem;
  font-family: "montserrat", sans-serif;
  letter-spacing: .2rem;
}

h3 {
  font-size: 2.8rem;
  font-family: "montserrat", sans-serif;
  font-weight: bold;
  letter-spacing: .2rem;
}

h4 {
  font-size: 2rem;
  font-family: "montserrat", sans-serif;
  font-weight: lighter;
}

h5 {
  font-size: 2.4rem;
  font-family: "source sans pro", sans-serif;
  line-height: 3rem;
}

p, a, li {
  font-size: 2rem;
  font-family: "source sans pro", sans-serif;
  line-height: 2.2rem;
}

.center {
  display: flex;
  justify-content: center;
}

.center-title {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.title-background {
  position: relative;
  text-align: center;
}

.centerli {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.fullscrn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 90vh;
  margin: auto 2rem;
}

.halfscrn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 40rem;
  margin: auto 2rem;
}

.long-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: auto 2rem;
}

.light {
  color: #FDFFFC;
}

.dark {
  color: #011627;
}

.botmargsml {
  margin-bottom: 1rem;
}

.botmarglrg {
  margin-bottom: 6rem;
}

.topmarglrg {
  margin-top: 6rem;
}

.margins {
  margin: 6rem 2rem;
}

.topnbotmarg {
  margin: 6rem auto;
}

.halfscrntop {
  margin-top: 40rem;
}

.halfscrnbot {
  margin-bottom: 50vh;
}

/* Bounce animation for icons*/
@keyframes bounce {
  0% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  50% {
    -webkit-transform: translateY(-6px);
    transform: translateY(-6px);
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

header {
  background-color: #011627;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 8.8rem;
}

.container {
  position: relative;
  overflow-x: hidden;
}

.my-logo {
  cursor: pointer;
  margin-left: 3rem;
  transition: 1s;
}

.my-logo:hover {
  -webkit-transform: rotate(90deg);
  transform: rotate(90deg);
}

.menu {
  display: block;
  cursor: pointer;
  margin-right: 3rem;
}

.menu:hover .line1 {
  width: 2.6rem;
}

.menu:hover .line2 {
  width: 2.6rem;
}

.menu:hover .line3 {
  width: 2.6rem;
}

.menu div {
  background-color: #FDFFFC;
  border-radius: .1rem;
  height: .2rem;
  margin: .7rem 0;
  transition: all 0.4s ease;
}

.line1 {
  width: 2.6rem;
}

.line2 {
  width: 1.4rem;
}

.line3 {
  width: 2rem;
}

.menu-items {
  background-color: #011627;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;
  position: absolute;
  right: 0rem;
  top: 8.8rem;
  height: 60vh;
  width: 100%;
  transform: translateX(100%);
  transition: transform 0.5s ease-in;
}

.menu-items li {
  list-style: none;
  opacity: 0;
}


.menu-items a {
  color: #FDFFFC;
  font-size: 2.4rem;
  letter-spacing: .2rem;
  text-decoration: none;
}

.menu-items li a::after {
  position: absolute;
  background: #FDFFFC;
  content: '';
  width: 100%;
  height: .2rem;
  top: 100%;
  left: 0;
  transition: transform 0.5s;
  transform: scaleX(0);
  transform-origin: right;
}

.menu-items li a:hover::after {
  transform: scaleX(1);
  transform-origin: left;
}

.menu-active {
  transform: translateX(0%);
}

@keyframes menuItemFade {
  from {
    opacity: 0;
    transform: translateX(50px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}

.toggle .line1 {
  width: 2.5rem;
  transform: rotate(-45deg) translate(-5px, 6px);
  -webkit-transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
  opacity: 0;
}

.toggle .line3 {
  width: 2.5rem;
  transform: rotate(45deg) translate(-6px, -7px);
  -webkit-transform: rotate(45deg) translate(-6px, -7px);
}

main {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
}

.intro {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 80vh;
}

.intro h1 {
  margin-bottom: .8rem;
}

.Decantr {
  background-image: linear-gradient(#500C60, #9A031E);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  overflow: hidden;
  height: 100vh;
  width: 100vw;
}

.Decantr1 {
  width: 24rem;
}

.Decantr1:hover {
  filter: drop-shadow(6rem 6rem 6rem rgba(0, 0, 0, 0.4));
}

.Decantr2 {
  display: none;
}

.Decantr3 {
  display: none;
}

.SkySaves {
  background-color: #FDFFFC;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  width: 100%;
}

.SkySaves1 {
  width: 30rem;
}

.SkySaves1:hover {
  filter: drop-shadow(6rem 6rem 6rem rgba(0, 0, 0, 0.4));
}

.BusyBus {
  background-color: #D0DCE5;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
}

.BusyBus1 {
  width: 24rem;
}

.BusyBus1:hover {
  filter: drop-shadow(6rem 6rem 6rem rgba(0, 0, 0, 0.4));
}

.MiniProjects {
  background-color: #2EC4B6;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
}

.MiniProjects1 {
  width: 100%;
}

.MiniProjects1:hover {
  box-shadow: 6rem 6rem 6rem rgba(0, 0, 0, 0.25);
}

.Dribbble {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 10rem auto;
}

.Dribbble a {
  color: #EA4C89;
  text-decoration: none;
}

.Dribbble a:hover {
  text-decoration: underline;
}

.footmedia {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 3rem;
}

.footmedia li:hover {
  animation: bounce 1s 1;
  color: #2EC4B6;
}
/* ... */

